# jinn

./: .gitignore  LICENSE  README.md  pyproject.toml
src/jinn/: __main__.py  cmd.py  core.py  settings.py  utilities.py
src/jinn/templates/jinn/: base.jinja  head.jinja  html_tag.jinja  link.jinja  meta.jinja  minima.jinja  void_element.jinja
src/jinn/themes/simple_site/: simple_site.jinja  simple_site.py
src/jinn/themes/simple_site/static/: simple_site.css
