
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jinn"
version = "0.0.1"
authors = [
  { name="j0ono0 (John Newall)", email="john@johnnewall.com" },
]
dependencies = ["Jinja2>=3.1.3", "Markdown>=3.6"]
description = "Static site generator framework using Python, Jinja2, and Markdown."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
